# scimake

./: CMakeLists.txt  CPackOptions.cmake.in  DetermineVisItArchitecture.cmake  EclipseLicense.txt  Makefile.am  Makefile.show  Polyswift.cmake  README.txt  SciCChecks.cmake  SciCppCheck.cmake  SciCxxChecks.cmake  SciCxxFindVersion.cmake  SciDiffMacros.cmake  SciDocLogic.cmake  SciFinalize.cmake  SciFindCompilerVersion.cmake  SciFortranChecks.cmake  SciFortranDouble.cmake  SciFortranFindVersion.cmake  SciFuncsMacros.cmake  SciGetDepsFromInstall.cmake  SciGrabPackage.cmake  SciInit.cmake  SciLinkChecks.cmake  SciMpiLauncher.cmake  SciMultiArchKernels.cmake  SciOmpSseAvx.cmake  SciQt.cmake  SciSeparateLibs.cmake  SciSquishTestScript.cmake  SciSseAvx.cmake  SciStart.ctest  SciSvnInfo.cmake  SciTestConfig.cmake  SciTextCompare.cmake  SciTextCompareManyCmd.cmake  SciTranspPreprocess.cmake  SciUnitTestMacros.cmake  SciWinFlags.cmake  Start.ctest  (+3 more)
Modules/: FindEpicsExtensions.cmake  FindSciAcis3DInterOp.cmake  FindSciAcisVizExchange.cmake  FindSciAdios.cmake  FindSciAtlas.cmake  FindSciBabel.cmake  FindSciBlasLapack.cmake  FindSciBoost.cmake  FindSciBotan.cmake  FindSciCLapackCMake.cmake  FindSciCamellia.cmake  FindSciCarve.cmake  FindSciCfitsio.cmake  FindSciCgm.cmake  FindSciChecker.cmake  FindSciChombo.cmake  FindSciComposerToolkit.cmake  FindSciCppCheck.cmake  FindSciCppcheck.cmake  FindSciCubit.cmake  FindSciCuda.cmake  FindSciCusp.cmake  FindSciDagmc.cmake  FindSciDakota.cmake  FindSciDocutils.cmake  FindSciDoxygen.cmake  FindSciEigen3.cmake  FindSciExodusii.cmake  FindSciFacetsIfc.cmake  FindSciFcIoWrappers.cmake  FindSciFftw.cmake  FindSciFftw3.cmake  FindSciFluxgrid.cmake  FindSciFmcfm.cmake  FindSciFreeType.cmake  FindSciG4engine.cmake  FindSciG4examples.cmake  FindSciG4userdocs.cmake  FindSciGPerfTools.cmake  FindSciGaCode.cmake  (+82 more)
delucaExtendUnitTesting/: Makefile.show  SciCChecks.cmake  SciCxxChecks.cmake  SciDocLogic.cmake  SciFinalize.cmake  SciInit.cmake  SciLinkChecks.cmake  SciSeparateLibs.cmake  SciTestConfig.cmake  SciTextCompare.cmake  SciUnitTestMacros.cmake
delucaExtendUnitTesting/Modules/: FindSciAtlas.cmake  FindSciBabel.cmake  FindSciBlasLapack.cmake  FindSciBotan.cmake  FindSciCarve.cmake  FindSciCfitsio.cmake  FindSciCubit.cmake  FindSciCusp.cmake  FindSciDocutils.cmake  FindSciExodusii.cmake  FindSciFftw.cmake  FindSciFmcfm.cmake  FindSciFreeType.cmake  FindSciGeant4.cmake  FindSciGtest.cmake  FindSciHdf5.cmake  FindSciHypre.cmake  FindSciLibXml2.cmake  FindSciLibssh.cmake  FindSciMathJax.cmake  FindSciMesa.cmake  FindSciMetis.cmake  FindSciMex.cmake  FindSciMkl.cmake  FindSciMoab.cmake  FindSciMpi.cmake  FindSciMuparser.cmake  FindSciNe7ssh.cmake  FindSciNemesis.cmake  FindSciNetlibLite.cmake  FindSciNubeam.cmake  FindSciOce.cmake  FindSciOpenSsl.cmake  FindSciPatoh.cmake  FindSciPetsc.cmake  FindSciPlasmaState.cmake  FindSciPng.cmake  FindSciPspline.cmake  FindSciPython.cmake  FindSciSimD.cmake  (+13 more)
delucaExtendUnitTesting/include/: CMakeLists.txt  sci_type.in
include/: CMakeLists.txt  sci_array  sci_array.in  sci_array_arith.in  sci_shared_ptr  sci_type.in
trycompile/: Makefile.am  checkCompilerRTTI.cxx  gendeclstatics.cxx  modulesrcfile.f90  mpi_h.cxx  mpi_mod.f90  pragma_omp_simd.cxx  shared_ptr.cxx  stdabsdbl.cxx
