######################################################################
#
# CMakeLists.txt for scimake
#
# $Id$
#
# Copyright &copy; 2005-2014, Tech-X Corporation, Boulder, CO.
# Arbitrary redistribution allowed provided this copyright remains.
#
######################################################################

# Only for creating self-contained sci_array
message(STATUS "Adding include subdirectory")
add_subdirectory(include)

