## ############################################################
##
## File:    Makefile.am
##
## Purpose: Purpose: Needed for cmake in an autotools project
##
## $Id$
##
## Copyright &copy; 2012-2014, Tech-X Corporation, Boulder, CO.
## Arbitrary redistribution allowed provided this copyright remains.
##
## ############################################################

SUBDIRS =

EXTRA_DIST = \
  checkCompilerRTTI.cxx gendeclstatics.cxx modulesrcfile.f90 \
  mpi_mod.f90 mpi_h.cxx stdabsdbl.cxx

