# #############################################################
#
# File:    Makefile.am
#
# Purpose: Purpose: Needed for cmake in an autotools project
#
# $Id$
#
# Copyright &copy; 2012-2015, Tech-X Corporation, Boulder, CO.
# All rights reserved.
#
# #############################################################

SUBDIRS =

EXTRA_DIST = \
  checkCompilerRTTI.cxx gendeclstatics.cxx modulesrcfile.f90 \
  mpi_mod.f90 mpi_h.cxx stdabsdbl.cxx

